--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,12 @@
-body{
-background: rgba(255, 255, 255, 0.9);
+body {
+  background: rgba(255, 255, 255, 0.9);
 }
-.container{
+.container {
   margin-top: 50px;
 }
-.title{
+.title {
   font-size: 50px;
+}
+.navbar-brand {
+  font-size: 25px;
 }
