--- a/css/custom.css
+++ b/css/custom.css
@@ -6,6 +6,7 @@ body {
 }
 .title {
   font-size: 50px;
+  margin-bottom: 50px;
 }
 .navbar-brand {
   font-size: 25px;
@@ -22,8 +23,11 @@ svg {
 
 .axis path, .axis line {
   fill: none;
-  stroke-width: .5px;
+  stroke-width: 1px;
+  opacity: 0.5;
 }
+
+
 
 .x.axis path {
   stroke: #000;
@@ -32,19 +36,27 @@ svg {
 
 
 .x.axis line {
-  stroke: #fff;
-  stroke-opacity: .5;
+  stroke: #000;
+  stroke-opacity: 0.1;
 }
 
 .y.axis line {
-  stroke: #ddd;
+  stroke: #000;
+    stroke-opacity: 0.1;
 }
 
 path.line {
-  fill: none;
-  stroke: #000;
-  stroke-width: .6px;
+  fill:none;
+  stroke: url(#gradient);
+  stroke-width: 1.5px;
 }
+
+path.area{
+  fill:none;
+  stroke: url(#gradient);
+opacity: 0.1
+}
+
 
 rect.pane {
   cursor: move;
