--- a/css/custom.css
+++ b/css/custom.css
@@ -2,64 +2,52 @@ body {
   background: rgba(255, 255, 255, 0.9);
 }
 .container {
-  margin-top: 50px;
+margin: 7px;
 }
-.title {
-  font-size: 50px;
-  margin-bottom: 50px;
-}
+
 .navbar-brand {
-  font-size: 25px;
+  font-size: 45px;
 }
-
-
+.navbar-right{
+font-size: 20px;
+}
 svg {
   font: 10px sans-serif;
 }
-
 .axis {
   shape-rendering: crispEdges;
 }
-
 .axis path, .axis line {
   fill: none;
   stroke-width: 1px;
   opacity: 0.5;
 }
-
-
-
 .x.axis path {
   stroke: #000;
   stroke-width: 1px;
 }
-
-
 .x.axis line {
   stroke: #000;
   stroke-opacity: 0.1;
 }
-
 .y.axis line {
   stroke: #000;
-    stroke-opacity: 0.1;
+  stroke-opacity: 0.1;
 }
-
 path.line {
-  fill:none;
+  fill: none;
   stroke: url(#gradient);
-  stroke-width: 1.5px;
+  stroke-width: 2px;
 }
-
-path.area{
-  fill:none;
+path.area {
+  fill: none;
   stroke: url(#gradient);
-opacity: 0.1
+  opacity: 0.1
 }
-
-
 rect.pane {
-  cursor: move;
   fill: none;
   pointer-events: all;
+}
+g{
+  font-size: 11px;
 }
