--- a/css/custom.css
+++ b/css/custom.css
@@ -51,3 +51,61 @@ rect.pane {
 g{
   font-size: 11px;
 }
+
+
+
+
+
+.box {
+  width: 400px;
+  height: 450px;
+  box-shadow: 1px 1px 20px rgba(0,0,0,0.58);
+  float: left;
+  margin-left: 160px;
+  margin-top: 20px;
+}
+.box img {
+  width: 400px;
+  height: 450px;
+}
+.box .overlay {
+  width: 400px;
+  height: 450px;
+  background: #fff;
+  margin: -450px 0px 0px 0px;
+  opacity: 0.3;
+}
+.box a {
+  padding: 5px 7px;
+
+  font-family: sans-serif;
+  font-size: 14px;
+  margin: -290px 0px 0px 60px;
+  display: inline-block;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+  position: absolute;
+}
+.box .overlay:hover {
+  opacity: 0.1;
+  transition: all 0.5s ease-in-out;
+  width: 400px;
+  margin-left: 50px;
+  float: right;
+}
+.box:hover {
+  box-shadow:7px 7px 37px -2px rgba(0,0,0,0.58);
+
+  transition: all 0.6s ease-in-out;
+}
+.box:hover a {
+  opacity: 1;
+  background: rgba(255,255,255,0.7);
+  color: #000000;
+  font-size: 60px;
+}
+.box a:hover {
+text-decoration: none;
+  transition: all 0.5s ease-in-out;
+}
